[package]
name = "waller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["std_rng"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
sha2 = "0.9.8"
hex = "0.4.3"
bs58 = "0.4.0"
bip39 = "1.0.1"
