[package]
name = "waller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["std_rng"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
k256 = { version = "0.9.6", features = ["ecdsa-core", "arithmetic"]}
sha2 = "0.9.8"
ecdsa = "0.12.4"
hmac-sha512 = "0.1.9"
ripemd160 = "0.9.1"
hex = "0.4.3"
bs58 = "0.4.0"
bip0039 = "0.9"
num-bigint = "0.4.2"
